--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springtestapp
 spring.datasource.username=root
-spring.datasource.password=Chujdupa2137xd!
+spring.datasource.password=1234567890
