--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springtestapp
+spring.datasource.url=jdbc:mysql://localhost:3306/calculator
 spring.datasource.username=root
 spring.datasource.password=Chujdupa2137xd!
+server.port=8082
